# srvaudit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/srvaudit/: __main__.py  cli.py  distro.py  models.py  sanitize.py  scoring.py  transport.py
src/srvaudit/checks/: __init__.py  auto_updates.py  capabilities.py  cron.py  docker_check.py  dotenv.py  fail2ban.py  filesystem.py  firewall.py  kernel.py  open_ports.py  registry.py  ssh_config.py  ssh_keys.py  sudoers.py  updates.py  users.py  world_writable.py
src/srvaudit/output/: json_report.py  terminal.py
tests/: conftest.py  test_cli.py  test_diff.py  test_scoring.py
tests/test_checks/: test_audit_fixes.py  test_fail2ban.py  test_firewall.py  test_open_ports.py  test_ssh_config.py  test_updates.py  test_users.py
