[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srvaudit"
version = "0.1.0"
description = "Remote Linux server security audit via SSH"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Oleg Usoltsev" }]
keywords = ["security", "audit", "ssh", "linux", "server", "devops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "paramiko>=3.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout",
    "ruff>=0.4",
]

[project.scripts]
srvaudit = "srvaudit.cli:app"

[project.urls]
Homepage = "https://github.com/CynepMyx/srvaudit"
Issues = "https://github.com/CynepMyx/srvaudit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires Docker (deselect with '-m not integration')",
]
